--- a/index.html
+++ b/index.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA - Home</title>
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="img/logo1.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
-        <nav class="nav-left">
+        <div class="logo">
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+        </div>
+        <div class="nav-right">
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a href="aboutus.html">About Us</a>
             <a href="contactus.html">Contact us</a>
-        </nav>
-        <div class="logo">
-            <img src="img/logo.png" alt="Logo">
-        </div>
-        <div class="nav-right">
-            <img src="img/acc.png" alt="Account" title="Account">
+            <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
     <section class="starti">
         <div class="explore-more">
-            <h3>CHRISTMAS EDITION</h3>
+            <h3>Timeless Luxury Edition</h3>
             <h1>E & A New Collection</h1>
-            <p>Discover our limited holiday beauty essentials, created to bring a touch of magic to your season.</p>
-            <button>Explore more</button>
+            <p>Refined beauty, crafted for you.</p>
+            <button><a href="products.html">Explore more</a></button>
         </div>
     </section>
     
