--- a/signup.html
+++ b/signup.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA - Sign Up</title>
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="img/logo1.png">
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <header class="header">
-        <nav class="nav-left">
+        <div class="logo">
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+        </div>
+        <div class="nav-right">
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a href="aboutus.html">About Us</a>
             <a href="contactus.html">Contact us</a>
-        </nav>
-        <div class="logo">
-            <img src="img/logo.png" alt="Logo">
-        </div>
-        <div class="nav-right">
-            <img src="img/acc.png" alt="Account" title="Account">
+            <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
     <div class="container">
