changed the design part3

--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EA - Home</title>
+    <title>EA - Products</title>
     <link rel="icon" href="img/logo1.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,14 +20,19 @@
             <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
-    <section class="starti">
-        <div class="explore-more">
-            <h3>Timeless Luxury Edition</h3>
-            <h1>E & A </h1>
-            <p>Refined beauty, crafted for you.</p>
-            <button><a href="products.html">Explore more</a></button>
-        </div>
+   <main>
+    <section class="products">
+        <h1>Our Products</h1>
+        <p>Discover our curated selection of beauty essentials crafted for your daily rituals.</p>
     </section>
+        <section class="products-filters">
+        <button class="filter-btn active">All</button>
+        <button class="filter-btn">Skincare</button>
+        <button class="filter-btn">Makeup</button>
+        <button class="filter-btn">Fragrances</button>
+    </section>
+
+
     
 </body>
 </html>
