--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <title>EA - Sign Up</title>
     <link rel="icon" href="img/logo1.png">
     <link rel="stylesheet" href="style1.css">
+    <script src="signup.js"></script>
 </head>
 <body>
     <header class="header">
@@ -25,18 +26,18 @@
         <form action="#">
             <h1>CREATE AN ACCOUNT</h1>
             <label>Name</label>
-            <input type="text" name="" id="" placeholder="Enter your name">
+            <input type="text" name="" id="name" placeholder="Enter your name">
             <label>Surname</label>
-            <input type="text" name="" id="" placeholder="Enter your surname">
+            <input type="text" name="" id="surname" placeholder="Enter your surname">
             <label>Email</label>
-            <input type="email" name="" id="" placeholder="Enter your email">
+            <input type="email" name="" id="email" placeholder="Enter your email">
             <label>Username</label>
-            <input type="text" name="" id="" placeholder="Enter your username">
+            <input type="text" name="" id="username" placeholder="Enter your username">
             <label>Password</label>
-            <input type="password" name="" id="" placeholder="Enter your password">
+            <input type="password" name="" id="password" placeholder="Enter your password">
             <label>Confirm Password</label>
-            <input type="password" name="" id="" placeholder="Confirm your password">
-            <button type="submit" class="signup-button">Sign up</button>
+            <input type="password" name="" id="confirmpassword" placeholder="Confirm your password">
+            <button type="submit" class="signup-button" onclick="showAlert()">Sign up</button>
             <p style="text-align: center; text-decoration: underline;">Already have an account?</p>
         </form>
         </div>
