homepage design changed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="explore-more">
             <h3>Timeless Luxury Edition</h3>
             <h1>E & A </h1>
-            <p>Refined beauty, crafted for you.</p>
+            <p>A touch of color. A soft glow. A moment for yourself — because you deserve to feel beautiful.</p>
             <button><a href="products.html">Explore more</a></button>
         </div>
     </section>
