--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA - Products</title>
     <link rel="icon" href="img/logo1.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header class="header">
@@ -27,9 +27,10 @@
     </section>
         <section class="products-filters">
         <button class="filter-btn active">All</button>
-        <button class="filter-btn">Skincare</button>
-        <button class="filter-btn">Makeup</button>
-        <button class="filter-btn">Fragrances</button>
+        <button class="filter-btn">Eyebrows & Eye Makeup</button>
+        <button class="filter-btn">Face Makeup</button>
+        <button class="filter-btn">Lips</button>
+        <button class="filter-btn">Brushes & Accessories</button>
     </section>
 
 
