homepage-slider & product-sale

--- a/index.html
+++ b/index.html
@@ -28,6 +28,106 @@
             <button><a href="products.html">Explore more</a></button>
         </div>
     </section>
-    
+
+    <section class="sale-section">
+        <div class="sale-header">
+            <h2>Limited Time Deals</h2>
+            <p>Soft mattes, juicy glosses & glow essentials – now with up to 35% off.</p>
+        </div>
+
+        <div class="sale-slider">
+            <button class="slide-btn prev"> < </button>
+
+            <div class="slides-wrapper">
+
+                <div class="slide active">
+                    <div class="slide-text">
+                        <span class="badge">-25%</span>
+                        <h3>Velvet Nude Lip Kit</h3>
+                        <p>Signature beige-nude combo for everyday soft glam.</p>
+
+                        <div class="price-row">
+                            <span class="price">18.60</span>
+                            <span class="old-price">24.90</span>
+                        </div>
+                        <a href="products.html" class="slide-cta">View deal</a>
+                    </div>
+                    <div class="slide-image">
+                        <img src="img/sale1.jpg" alt="Velvet Nude Lip Kit">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-text">
+                        <span class="badge">-25%</span>
+                        <h3>Length & Lift Mascara</h3>
+                        <p>Smudge-proof mascara for long, lifted, fluttery lashes.</p>
+
+                        <div class="price-row">
+                            <span class="price">14.90</span>
+                            <span class="old-price">19.90</span>
+                        </div>
+                        <a href="products.html" class="slide-cta">View deal</a>
+                    </div>
+                    <div class="slide-image">
+                        <img src="img/sale3.jpg" alt="Velvet Nude Lip Kit">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-text">
+                        <span class="badge">-50%</span>
+                        <h3>High-Shine Lip Gloss</h3>
+                        <p>Juicy, non-sticky gloss with a glass-like shine finish.</p>
+
+                        <div class="price-row">
+                            <span class="price">12.50<span>
+                            <span class="old-price">25.00</span>
+                        </div>
+                        <a href="products.html" class="slide-cta">View deal</a>
+                    </div>
+                    <div class="slide-image">
+                        <img src="img/sale4.jpg" alt="Velvet Nude Lip Kit">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-text">
+                        <span class="badge">-30%</span>
+                        <h3>Soft Focus Foundation</h3>
+                        <p>Lightweight, buildable foundation with a natural skin-like finish.</p>
+
+                        <div class="price-row">
+                            <span class="price">21.00</span>
+                            <span class="old-price">30.00</span>
+                        </div>
+                        <a href="products.html" class="slide-cta">View deal</a>
+                    </div>
+                    <div class="slide-image">
+                        <img src="img/sale5.jpg" alt="Velvet Nude Lip Kit">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-text">
+                        <span class="badge">-20%</span>
+                        <h3>Pressed Blush Powder</h3>
+                        <p>Blendable blush for a natural fresh-faced glow.</p>
+
+                        <div class="price-row">
+                            <span class="price">15.20</span>
+                            <span class="old-price">19.00</span>
+                        </div>
+                        <a href="products.html" class="slide-cta">View deal</a>
+                    </div>
+                    <div class="slide-image">
+                        <img src="img/sale6.jpg" alt="Velvet Nude Lip Kit">
+                    </div>
+                </div>
+            </div>
+            <button class="slide-btn next"> > </button>
+        </div> 
+        <div class="view-more-sales">
+            <a href="products.html">View more deals</a>
+        </div>
+
+    </section>
+    <script src="slider.js"></script>
 </body>
 </html>
