--- a/products.html
+++ b/products.html
@@ -49,6 +49,9 @@
             <img src="img/brushes.png" alt="Brushes & Accessories">
             <p>Brushes & Accessories</p>
         </button>
+        <button class="category-card all-category" style="color: red; background: rgba(255, 150, 160, 0.40); font-size: 25px; font-weight: 700; letter-spacing: 0.5px;"  onclick="filterProducts('sale')">
+            SALE %
+        </button>
     </section>
 
 
