Update aboutus.html + aboutus.png + login.css

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA - Log In</title>
     <link rel="icon" href="img/logo1.png">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="login.css">
     <script src="signup.js"></script>
 </head>
 <body>
@@ -18,7 +18,7 @@
             <a href="products.html">Products</a>
             <a href="aboutus.html">About Us</a>
             <a href="contactus.html">Contact us</a>
-            <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
+            <a href="login.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
     <div class="container">
@@ -30,7 +30,7 @@
             <label>Password</label>
             <input type="password" name="" id="password" placeholder="Enter your password">
             <button type="submit" class="signup-button" onclick="showAlert()">Log In</button>
-            <a href="signup.html" style="text-align: center; text-decoration: underline;">Don’t have an account?</a>
+            <a href="signup.html" style="text-align: center; color: #C14279;"><b>Don’t have an account?</b></a>
         </form>
         </div>
     </div>
