--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="products.html">Products</a>
             <a href="aboutus.html">About Us</a>
             <a href="contactus.html">Contact us</a>
-            <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
+            <a href="login.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
     <section class="starti">
