--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
             <a href="products.html">Products</a>
             <a href="aboutus.html">About Us</a>
             <a href="contactus.html">Contact us</a>
-            <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
+            <a href="login.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
     <div class="container">
@@ -38,7 +38,7 @@
             <label>Confirm Password</label>
             <input type="password" name="" id="confirmpassword" placeholder="Confirm your password">
             <button type="submit" class="signup-button" onclick="showAlert()">Sign up</button>
-            <p style="text-align: center; text-decoration: underline;">Already have an account?</p>
+            <a href="login.html" style="text-align: center; color: #C14279;"><b>Already have an account?</b></a>
         </form>
         </div>
     </div>
