christmas advent calendar section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <p>Juicy, non-sticky gloss with a glass-like shine finish.</p>
 
                         <div class="price-row">
-                            <span class="price">12.50<span>
+                            <span class="price">12.50</span>
                             <span class="old-price">25.00</span>
                         </div>
                         <a href="products.html" class="slide-cta">View deal</a>
@@ -127,6 +127,52 @@
             <a href="products.html">View more deals</a>
         </div>
 
+    </section>
+    <section class="christmas-section">
+        <div class="christmas-header">
+            <span class="christmas-tag">Christmas Limited Edition✨</span>
+            <h2>Advent Calendar Collection🎄</h2>
+            <p>Celebrate the season with our exclusive Advent Calendars — curated beauty moments for every day until Christmas.</p>
+        </div>
+        <div class="calendar-grid">
+
+            <div class="calendar-card">
+                <div class="calendar-img">
+                    <img src="img/kylie.png" alt="">
+                </div>
+                <div class="calendar-content">
+                    <h3>Classic Beauty Advent</h3>
+                    <p>24 essentials inspired by soft, everyday elegance.</p>
+                    <span class="calendar-price">49.90€</span>
+                    <a href="products.html" class="calendar-cta">Shop now</a>
+                </div>
+            </div>
+
+            <div class="calendar-card">
+                <div class="calendar-img">
+                    <img src="img/dior.png" alt="">
+                </div>
+                <div class="calendar-content">
+                    <h3>Glazed Lip & Glow</h3>
+                    <p>High-shine glosses, soft glow & festive shimmer.</p>
+                    <span class="calendar-price">59.90€</span>
+                    <a href="products.html" class="calendar-cta">Shop now</a>
+                </div>
+            </div>
+
+            <div class="calendar-card">
+                <div class="calendar-img">
+                    <img src="img/adv.jpg" alt="">
+                </div>
+                <div class="calendar-content">
+                    <h3>Full Glam Advent</h3>
+                    <p>Everything you need for the perfect festive glam.</p>
+                    <span class="calendar-price">69.90€</span>
+                    <a href="products.html" class="calendar-cta">Shop now</a>
+                </div>
+            </div>
+
+        </div>
     </section>
     <script src="slider.js"></script>
 </body>
