--- a/products.html
+++ b/products.html
@@ -54,7 +54,47 @@
         </button>
     </section>
 
+    <footer class="footer">
+        <div class="footer-newsletter">
+            <h3>Stay in the Glow</h3>
+            <p>Subscribe to receive updates on new products and exclusive offers.</p>
+            <form class="newsletter-form">
+                <input type="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="footer-nav">
+            <div class="footer-column">
+                <h4>Products</h4>
+                <a href="products.html#eyes-brows">Eyes & Brows</a>
+                <a href="products.html#face">Face</a>
+                <a href="products.html#lips">Lips</a>
+                <a href="products.html#brushes">Brushes & Accessories</a>
+                <a href="products.html#sale">Sale</a>
+            </div>
+            <div class="footer-column">
+                <h4>Explore</h4>
+                <a href="index.html">Home</a>
+                <a href="products.html">All Products</a>
+                <a href="aboutus.html">About Us</a>
+                <a href="contactus.html">Contact Us</a>
+            </div>
 
+            <div class="footer-column">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                    <a href=""><img src="img/ig.png" alt="Instagram"></a>
+                    <a href=""><img src="img/tiktok.png" alt="Tiktok"></a>
+                    <a href=""><img src="img/fb.png" alt="Facebook"></a>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 E & A Cosmetics. All rights reserved.</p>
+        </div>
+    </footer>
     
 </body>
 </html>
