ndryshime nlogin.css

--- a/aboutus.html
+++ b/aboutus.html
@@ -15,13 +15,14 @@
         }
 
         .header {
-            background-color: #fff;
-            padding: 15px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 2px solid #f3c6d8;
-        }
+         background-color: #FFF8FC;
+         padding: 12px 40px;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+}
+
 
         .logo img {
             height: 45px;
