--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="products.html">Products</a>
             <a href="aboutus.html">About Us</a>
             <a href="contactus.html">Contact us</a>
-            <a href="signup.html"><img src="img/acc.png" alt="Account" title="Account"></a>
+            <a href="login.html"><img src="img/acc.png" alt="Account" title="Account"></a>
         </div>
     </header>
     <section class="starti">
@@ -79,7 +79,7 @@
                         <p>Juicy, non-sticky gloss with a glass-like shine finish.</p>
 
                         <div class="price-row">
-                            <span class="price">12.50<span>
+                            <span class="price">12.50</span>
                             <span class="old-price">25.00</span>
                         </div>
                         <a href="products.html" class="slide-cta">View deal</a>
@@ -128,6 +128,93 @@
         </div>
 
     </section>
+    <section class="christmas-section">
+        <div class="christmas-header">
+            <span class="christmas-tag">Christmas Limited Edition✨</span>
+            <h2>Advent Calendar Collection🎄</h2>
+            <p>Celebrate the season with our exclusive Advent Calendars — curated beauty moments for every day until Christmas.</p>
+        </div>
+        <div class="calendar-grid">
+
+            <div class="calendar-card">
+                <div class="calendar-img">
+                    <img src="img/kylie.png" alt="">
+                </div>
+                <div class="calendar-content">
+                    <h3>Classic Beauty Advent</h3>
+                    <p>24 essentials inspired by soft, everyday elegance.</p>
+                    <span class="calendar-price">49.90€</span>
+                    <a href="products.html" class="calendar-cta">Shop now</a>
+                </div>
+            </div>
+
+            <div class="calendar-card">
+                <div class="calendar-img">
+                    <img src="img/dior.png" alt="">
+                </div>
+                <div class="calendar-content">
+                    <h3>Glazed Lip & Glow</h3>
+                    <p>High-shine glosses, soft glow & festive shimmer.</p>
+                    <span class="calendar-price">59.90€</span>
+                    <a href="products.html" class="calendar-cta">Shop now</a>
+                </div>
+            </div>
+
+            <div class="calendar-card">
+                <div class="calendar-img">
+                    <img src="img/adv.jpg" alt="">
+                </div>
+                <div class="calendar-content">
+                    <h3>Full Glam Advent</h3>
+                    <p>Everything you need for the perfect festive glam.</p>
+                    <span class="calendar-price">69.90€</span>
+                    <a href="products.html" class="calendar-cta">Shop now</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-newsletter">
+            <h3>Stay in the Glow</h3>
+            <p>Subscribe to receive updates on new products and exclusive offers.</p>
+            <form class="newsletter-form">
+                <input type="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="footer-nav">
+            <div class="footer-column">
+                <h4>Products</h4>
+                <a href="products.html#eyes-brows">Eyes & Brows</a>
+                <a href="products.html#face">Face</a>
+                <a href="products.html#lips">Lips</a>
+                <a href="products.html#brushes">Brushes & Accessories</a>
+                <a href="products.html#sale">Sale</a>
+            </div>
+            <div class="footer-column">
+                <h4>Explore</h4>
+                <a href="index.html">Home</a>
+                <a href="products.html">All Products</a>
+                <a href="aboutus.html">About Us</a>
+                <a href="contactus.html">Contact Us</a>
+            </div>
+
+            <div class="footer-column">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                    <a href=""><img src="img/ig.png" alt="Instagram"></a>
+                    <a href=""><img src="img/tiktok.png" alt="Tiktok"></a>
+                    <a href=""><img src="img/fb.png" alt="Facebook"></a>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 E & A Cosmetics. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="slider.js"></script>
 </body>
 </html>
