Revert "Update About Us images"
This reverts commit dc40722c5713d25a0444df4c658701245d4f86ea, reversing
changes made to 91ce606a65d060a7567bedbee13cf9f4d2b889c8.

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA - About Us</title>
     <link rel="icon" href="img/logo1.png">
-
     <style>
         body{
             background-color: #F8D8E8;
@@ -15,16 +14,16 @@
         }
 
         header{
-            display: flex;
-            justify-content: space-between;
-            flex-direction: row;
-            flex-wrap: wrap;
-            background-color: #FFF8FC;
-            color: black;
-            padding: 12px 40px;
-            align-items: center;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
-        }
+        display: flex;
+        justify-content: space-between;
+         flex-direction: row;
+         flex-wrap: wrap;
+         background-color: #FFF8FC;
+         color: black;
+         padding: 12px 40px;
+         align-items: center;
+         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+}
 
         .logo img{
             height: 40px;
@@ -104,20 +103,16 @@
             font-size: 14px;
             color: #7a4b60;
             margin-bottom: 20px;
-            text-align: center;
         }
     </style>
 </head>
-
 <body>
-
     <header>
         <div class="logo">
             <a href="index.html">
                 <img src="img/logo.png" alt="Logo">
             </a>
         </div>
-
         <div class="nav-right">
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
@@ -143,6 +138,8 @@
         <p>
             What started as a small passion project quickly grew into a successful beauty destination —
             a place where innovation, quality, and self-care meet.
+            Over the years, EA Cosmetics has built a loyal community by focusing on trust,
+            authenticity, and a true love for beauty.
         </p>
         <p>
             Today, we proudly offer a wide selection of premium products,
@@ -154,6 +151,6 @@
 
     <div class="pink-line"></div>
 
-
 </body>
 </html>
+
