--- a/aboutus.html
+++ b/aboutus.html
@@ -1,156 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EA - About Us</title>
-    <link rel="icon" href="img/logo1.png">
-    <style>
-        body{
-            background-color: #F8D8E8;
-            font-family: 'Verdana', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header{
-        display: flex;
-        justify-content: space-between;
-         flex-direction: row;
-         flex-wrap: wrap;
-         background-color: #FFF8FC;
-         color: black;
-         padding: 12px 40px;
-         align-items: center;
-         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EA - About Us</title>
+<link rel="icon" href="img/logo1.png">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<style>
+body{
+    background-color:#F8D8E8;
+    font-family:Verdana, sans-serif;
+    margin:0;
+    padding:0;
 }
-
-        .logo img{
-            height: 40px;
-            width: auto;
-            object-fit: contain;
-        }
-
-        .nav-right{
-            display: flex;
-            flex-direction: row;
-            gap: 27px;
-            color: black;
-        }
-
-        .nav-right a{
-            color: black;
-            text-decoration: none;
-            font-size: 15px;
-            font-weight: 500;
-        }
-
-        .nav-right a:hover{
-            color: #C14279;
-            transition: 0.2s;
-            transform: scale(1.07);
-        }
-
-        .nav-right img{
-            width: auto;
-            height: 20px;
-            cursor: pointer;
-        }
-
-        .about-row {
-            display: flex;
-            justify-content: center;
-            gap: 25px;
-            margin-top: 50px;
-        }
-
-        .about-row img {
-            width: 220px;
-            height: auto;
-            border-radius: 40px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
-
-        .about-text {
-            width: 90%;
-            max-width: 1200px;
-            margin: 50px auto;
-            text-align: center;
-            color: #7a4b60;
-        }
-
-        .about-text h2 {
-            font-size: 32px;
-            letter-spacing: 2px;
-            color: #C14279;
-            margin-bottom: 15px;
-        }
-
-        .about-text p {
-            font-size: 18px;
-            line-height: 1.6;
-            margin-top: 10px;
-        }
-
-        .pink-line {
-            width: 100%;
-            height: 4px;
-            background-color: rgba(196, 55, 112, 0.5);
-            margin: 40px 0;
-        }
-
-        .owner-attribution {
-            font-size: 14px;
-            color: #7a4b60;
-            margin-bottom: 20px;
-        }
-    </style>
+header{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    background-color:#FFF8FC;
+    padding:12px 40px;
+    box-shadow:0 2px 8px rgba(0,0,0,0.04);
+}
+.logo img{
+    height:40px;
+}
+.nav-right{
+    display:flex;
+    gap:27px;
+}
+.nav-right a{
+    text-decoration:none;
+    color:black;
+    font-size:15px;
+}
+.nav-right a:hover{
+    color:#C14279;
+    transform:scale(1.07);
+}
+.nav-right img{
+    height:20px;
+}
+.about-row{
+    display:flex;
+    justify-content:center;
+    gap:25px;
+    margin-top:50px;
+}
+.about-row img{
+    width:220px;
+    border-radius:40px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.1);
+}
+.about-text{
+    max-width:1200px;
+    margin:50px auto;
+    text-align:center;
+    color:#7a4b60;
+    padding:0 20px;
+}
+.about-text h2{
+    color:#C14279;
+    font-size:32px;
+}
+.about-text p{
+    font-size:18px;
+    line-height:1.6;
+    margin-top:10px;
+}
+.pink-line{
+    width:100%;
+    height:4px;
+    background-color:rgba(196,55,112,0.5);
+    margin:50px 0;
+}
+.influencer-section{
+    max-width:1200px;
+    margin:0 auto 80px auto;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:20px;
+    padding:0 20px;
+}
+.video-side{
+    position:relative;
+    width:750px;
+    max-width:100%;
+    margin:0 auto;
+}
+.video-side img{
+    width:100%;
+    border-radius:25px;
+    cursor:pointer;
+    box-shadow:0 6px 16px rgba(0,0,0,0.2);
+    display:block;
+}
+.play-btn{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    font-size:80px;
+    color:white;
+    background:rgba(0,0,0,0.5);
+    border-radius:50%;
+    width:100px;
+    height:100px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.video-caption{
+    font-family: 'Poppins', sans-serif;
+    font-size:22px;
+    font-weight:600;
+    color:#7a4b60;
+    text-align:center;
+    margin-top:15px;
+}
+</style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <a href="index.html">
-                <img src="img/logo.png" alt="Logo">
-            </a>
-        </div>
-        <div class="nav-right">
-            <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="aboutus.html">About Us</a>
-            <a href="contactus.html">Contact us</a>
-            <a href="login.html"><img src="img/acc.png" alt="Account" title="Account"></a>
-        </div>
-    </header>
-
-    <div class="about-row">
-        <img src="aboutus1.png" alt="Model">
-        <img src="aboutus4.png" alt="Model">
-        <img src="aboutus3.png" alt="Model">
-        <img src="aboutus.png" alt="Model">
+<header>
+    <div class="logo">
+        <a href="index.html"><img src="img/logo.png"></a>
     </div>
-
-    <div class="about-text">
-        <h2>ABOUT US</h2>
-        <p>
-            EA Cosmetics began its journey in <strong>2014</strong>, born from a simple idea:
-            to bring high-quality beauty products from the world's most trusted and loved brands to everyone.
-        </p>
-        <p>
-            What started as a small passion project quickly grew into a successful beauty destination —
-            a place where innovation, quality, and self-care meet.
-            Over the years, EA Cosmetics has built a loyal community by focusing on trust,
-            authenticity, and a true love for beauty.
-        </p>
-        <p>
-            Today, we proudly offer a wide selection of premium products,
-            always keeping up with the newest trends and the needs of our customers.
-            Our mission is simple:
-            <strong>to empower every individual to feel beautiful, confident, and uniquely themselves.</strong>
-        </p>
+    <div class="nav-right">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="aboutus.html">About Us</a>
+        <a href="contactus.html">Contact us</a>
+        <a href="login.html"><img src="img/acc.png"></a>
     </div>
-
-    <div class="pink-line"></div>
-
+</header>
+<div class="about-row">
+    <img src="aboutus1.png">
+    <img src="aboutus4.png">
+    <img src="aboutus3.png">
+    <img src="aboutus.png">
+</div>
+<div class="about-text">
+    <h2>ABOUT US</h2>
+    <p>
+        EA Cosmetics began its journey in <strong>2014</strong>, born from a simple idea:
+        to bring high-quality beauty products from the world’s most trusted and loved brands to everyone.
+    </p>
+    <p>
+        What started as a small passion project quickly grew into a successful beauty destination —
+        a place where innovation, quality, and self-care meet.
+    </p>
+    <p>
+        Our mission is simple:
+        <strong>to empower every individual to feel beautiful, confident, and uniquely themselves.</strong>
+    </p>
+</div>
+<div class="pink-line"></div>
+<div class="influencer-section">
+    <div class="video-side">
+        <a href="https://www.youtube.com/watch?v=UxQg3_Cmwhw" target="_blank">
+            <img src="aboutus0.png" alt="Play Video">
+            <div class="play-btn">▶</div>
+        </a>
+        <p class="video-caption">Alexa Demie shares her daily routine using our products.</p>
+    </div>
+</div>
 </body>
 </html>
-
