product filters and pagination (JS)

--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
    <main>
     <section class="starti">
         <div class="explore-more">
-            <h2>Products</h2>
+            <h2 id="hero-title">Products</h2>
         </div>
     </section>
     <section class="products-intro">
@@ -53,6 +53,121 @@
             SALE %
         </button>
     </section>
+
+    <section class="products-grid" id="products-list">
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes sale">
+            <img src="img/prod-shad1.png" alt="Eyeshadow Palette">
+            <h3>Dreamy Eyeshadow Palette</h3>
+            <p class="product-category">Eyes & Brows • Sale</p>
+            <p class="product-price"><span class="old-price">€19.90</span> €14.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+        <div class="product-card" data-category="eyes">
+            <img src="img/prod-brow1.png" alt="Brow Pencil">
+            <h3>Perfect Brow Pencil</h3>
+            <p class="product-category">Eyes & Brows</p>
+            <p class="product-price">€9.90</p>
+        </div>
+
+    </section>
+    <div class="pagination" id="pagination"></div>
+
+    </main>
 
     <footer class="footer">
         <div class="footer-newsletter">
@@ -95,6 +210,8 @@
             <p>© 2025 E & A Cosmetics. All rights reserved.</p>
         </div>
     </footer>
+    <script src="products.js" defer></script>
+
     
 </body>
 </html>
