--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,6 @@
     <title>EA - Sign Up</title>
     <link rel="icon" href="img/logo1.png">
     <link rel="stylesheet" href="style1.css">
-    <script src="signup.js"></script>
 </head>
 <body>
     <header class="header">
@@ -37,10 +36,11 @@
             <input type="password" name="" id="password" placeholder="Enter your password">
             <label>Confirm Password</label>
             <input type="password" name="" id="confirmpassword" placeholder="Confirm your password">
-            <button type="submit" class="signup-button" onclick="showAlert()">Sign up</button>
+            <button type="submit" class="signup-button">Sign up</button>
             <a href="login.html" style="text-align: center; color: #C14279;"><b>Already have an account?</b></a>
         </form>
         </div>
     </div>
+    <script src="signup.js" defer></script>
 </body>
 </html>
