Product Page - Update hero section from image to video background

--- a/products.html
+++ b/products.html
@@ -22,10 +22,15 @@
     </header>
    <main>
     <section class="starti">
-        <div class="explore-more">
-            <h2 id="hero-title">Products</h2>
-        </div>
-    </section>
+    <video class="hero-video" autoplay muted loop playsinline>
+        <source src="img/video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <div class="explore-more">
+        <h2 id="hero-title">Products</h2>
+    </div>
+</section>
     <section class="products-intro">
         <p>Your beauty essentials, thoughtfully selected to elevate your everyday glow.</p>
     </section>
