Create Contact Us page with CSS, update About Us styles, and add footer to both pages

--- a/contactus.html
+++ b/contactus.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EA - About Us</title>
-<link rel="stylesheet" href="aboutstyle.css">
-<link rel="icon" href="img/logo1.png">
+<title>EA – Contact Us</title>
+<link rel="stylesheet" href="contactus.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
+
 <header>
     <div class="logo">
         <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
@@ -18,65 +18,72 @@
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
         <a href="aboutus.html">About Us</a>
-        <a href="contactus.html">Contact us</a>
+        <a href="contactus.html" class="active">Contact Us</a>
         <a href="login.html"><img src="img/acc.png" alt="Account"></a>
     </div>
 </header>
 
-<div class="about-row">
-    <img src="img/aboutus1.png" alt="">
-    <img src="img/aboutus4.png" alt="">
-    <img src="img/aboutus3.png" alt="">
-    <img src="img/aboutus.png" alt="">
-</div>
+<section class="hero">
+    <img src="img/huda.png" alt="Hero Image">
+    <h1>Contact Us</h1>
+</section>
 
-<div class="about-text">
-    <h2>ABOUT US</h2>
-    <p>
-        EA Cosmetics began its journey in <strong>2014</strong>, born from a simple idea:
-        to bring high-quality beauty products from the world’s most trusted and loved brands to everyone.
-    </p>
-    <p>
-        What started as a small passion project quickly grew into a successful beauty destination —
-        a place where innovation, quality, and self-care meet.
-    </p>
-    <p>
-        Our mission is simple:
-        <strong>to empower every individual to feel beautiful, confident, and uniquely themselves.</strong>
-    </p>
-</div>
-
-<div class="pink-line"></div>
-
-<div class="influencer-section">
-    <div class="video-side">
-        <a href="https://www.youtube.com/watch?v=UxQg3_Cmwhw" target="_blank">
-            <img src="img/aboutus0.png" alt="">
-            <div class="play-btn">▶</div>
-        </a>
-        <p class="video-caption">Alexa Demie shares her daily routine using our products.</p>
-        <div class="pink-line"></div>
-    </div>
-
-    <div class="influencer-row">
-        <div class="influencer-card" style="margin-right:120px;">
-            <img src="img/addisonrea.png" alt="">
-            <p><b>Addison Rae</b><br>Influencer working with us</p>
+<section class="help">
+    <h2>How can we help?</h2>
+    <div class="help-grid">
+        <div class="help-item">
+            <div class="help-circle"><img src="img/pink.png" alt=""></div>
+            <p>Advertise</p>
         </div>
-        <div class="influencer-card" style="margin-right:120px;">
-            <img src="img/mirtamiler.png" alt="">
-            <p><b>Mirta Miler</b><br>Influencer working with us</p>
+        <div class="help-item">
+            <div class="help-circle"><img src="img/pink.png" alt=""></div>
+            <p>Reporter / Media</p>
         </div>
-        <div class="influencer-card" style="margin-right:120px;">
-            <img src="img/meredithduxbury.png" alt="">
-            <p><b>Meredith Duxbury</b><br>Influencer working with us</p>
+        <div class="help-item">
+            <div class="help-circle"><img src="img/pink.png" alt=""></div>
+            <p>Contributor</p>
         </div>
-        <div class="influencer-card">
-            <img src="img/amayacolon.png" alt="">
-            <p><b>Amaya Colon</b><br>Influencer working with us</p>
+        <div class="help-item">
+            <div class="help-circle"><img src="img/pink.png" alt=""></div>
+            <p>Write</p>
+        </div>
+        <div class="help-item">
+            <div class="help-circle"><img src="img/pink.png" alt=""></div>
+            <p>Have a Tip</p>
+        </div>
+        <div class="help-item">
+            <div class="help-circle"><img src="img/pink.png" alt=""></div>
+            <p>Company</p>
         </div>
     </div>
-</div>
+</section>
+
+<section class="contact">
+    <h2>Let’s Start a Conversation</h2>
+    <div class="contact-grid">
+        <div class="contact-text">
+            <h3><b>Ask how we can help you</b></h3>
+            <p><b>Have questions about our products, orders, or collaborations?</b></p>
+            <ul>
+                <li><b>💄 Product inquiries</b></li>
+                <li><b>📦 Order support</b></li>
+                <li><b>🤝 Brand collaborations</b></li>
+            </ul>
+        </div>
+
+        <form>
+            <label>First Name</label>
+            <input type="text">
+            <label>Last Name</label>
+            <input type="text">
+            <label>Email</label>
+            <input type="email">
+            <label>Message</label>
+            <textarea></textarea>
+            <button>Send Message</button>
+        </form>
+    </div>
+</section>
 
 <footer class="footer">
     <div class="footer-newsletter">
