--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA - Log In</title>
     <link rel="icon" href="img/logo1.png">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style1.css">
     <script src="signup.js"></script>
 </head>
 <body>
